# comps

./: .gitignore  LICENSE  README.org  pyproject.toml
comps/: comprehension_builder.py  for_and.py  for_and_nest.py  for_dict.py  for_dict_nest.py  for_first.py  for_first_nest.py  for_fold.py  for_fold_nest.py  for_generator.py  for_generator_nest.py  for_last.py  for_last_nest.py  for_list.py  for_list_nest.py  for_or.py  for_or_nest.py  for_product.py  for_product_nest.py  for_set.py  for_sum.py  for_sum_nest.py  for_tuple.py  for_tuple_nest.py  generator_comprehension.py  operations.py
scripts/: speed_test.py
tests/: test_for_fold.py
