[tool.poetry]
name = "comps"
version = "0.1.0"
description = ""
authors = ["dr-neptune <mrosedatasci@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cytoolz = "^0.12.3"
pytest-subtests = "^0.13.1"
ruff = "^0.6.8"
ruff-lsp = "^0.0.57"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
